<resources>
    <string name="bt_bt_is_not_allow_crossover">该玩法不支持串关</string>
    <string name="show_floating_window">显示悬浮窗口</string>
    <string name="dismiss_floating_window">隐藏悬浮窗口</string>
    <string name="floatingwindow_app_name">floatingwindow</string>
    <string name="chat_private_with_host">主播私聊</string>

    <string name="chat_room_thanks">感谢&#160;&#160;</string>
    <string name="chat_room_gifted">&#160;赠送了&#160;</string>
    <string name="enter_room">进入直播间</string>
    <string name="chat_room_welcome">欢迎</string>
    <string name="live_notice">通知</string>
    <string name="live_chat">聊天</string>
    <string name="live_anchor">主播</string>
    <string name="live_ranking">排行榜</string>
    <string name="live_about_video">相关视频</string>
    <string name="live_talk_some_hint">我也来说几句..</string>
    <string name="tip_input_chat_msg_empty">请输入想发送的消息</string>
    <string name="live_comment_talk_some_hint">说点有爱的评论~</string>
    <string name="live_anchor_moving">主播动态</string>
    <string name="live_preview">直播预告</string>
    <string name="live_replay">直播回放</string>
    <string name="comment_time_sort">时间</string>
    <string name="comment_hot_sort">热度</string>
    <string name="original_poster">楼主</string>
    <string name="daily_list">日榜</string>
    <string name="week_list">周榜</string>
    <string name="gift_daily_ranking">贡献日榜</string>
    <string name="gift_week_ranking">贡献周榜</string>
    <string name="speaking_daily_ranking">话痨日榜</string>
    <string name="speaking_week_ranking">话痨周榜</string>
    <string name="month_list">月榜</string>
    <string name="total_list">总榜</string>
    <string name="gift">送礼物</string>
    <string name="choose_gift">请选择礼物</string>
    <string name="backpack">背包</string>
    <string name="give_away">赠送</string>
    <string name="text_block_function_one">屏蔽领取红包弹窗</string>
    <string name="text_block_function_two">屏蔽贵族特效</string>
    <string name="text_block_function_three">屏蔽礼物特效</string>
    <string name="text_block_function_four">屏蔽入场消息</string>
    <string name="send_red_envelope">发红包</string>
    <string name="red_envelope_text_one">现在还没有红包</string>
    <string name="red_envelope_text_two">来做第一个发红包的壕吧！</string>
    <string name="red_envelope_text_four">下一个红包即将来袭</string>
    <string name="view_red_envelope_list">查看红包列表>></string>
    <string name="text_shield_red_envelope">屏蔽领取红包弹窗？</string>
    <string name="total_amount">总金额</string>
    <string name="red_envelope_number">红包个数</string>
    <string name="text_red_envelope_type">当前为%1$s，改为%2$s</string>
    <string name="normal_red_envelope">普通红包</string>
    <string name="luck_red_envelope">运气红包</string>
    <string name="red_envelope_limit">红包类型</string>
    <string name="live_red_envelope">直播间红包</string>
    <string name="live_red_envelope_desc">所有直播间的用户都有机会收到</string>
    <string name="fans_red_envelope">粉丝红包</string>
    <string name="fans_red_envelope_desc">仅关注主播直播间的用户可收</string>
    <string name="confirm_send_red_envelope">立即发红包</string>
    <string name="text_red_envelope_max_value">单个红包不能超过20000钻石</string>
    <string name="red_envelope_pay_prefix">支付：</string>
    <string name="red_envelope_balance_prefix">余额：</string>
    <string name="red_envelope_balance_not_enough">余额不足(%1$s)</string>
    <string name="confirm_pay">确认支付</string>
    <string name="back">返回</string>
    <string name="congratulation">恭喜您</string>
    <string name="red_envelope_text_three">抢到%1$s派发的运气红包</string>
    <string name="text_send_red_envelope">发送一个直播间红包，快来领取吧！</string>
    <string name="text_open_red_envelope">立即开启</string>
    <string name="to_recharge">去充值</string>
    <string name="barrage_after_login">登录发弹幕，参与主播互动</string>

    <string name="title_open_nobel">成为贵族，万众瞩目</string>
    <string name="title_noble_right_one">专属坐骑</string>
    <string name="noble_mount_one">獠牙飞豹，威震八方\n公屏入场通知</string>
    <string name="noble_mount_two">威猛雄狮，傲视群雄\n公屏入场通知</string>
    <string name="noble_mount_three">烈焰白虎，神威下凡\n公屏入场通知</string>
    <string name="noble_mount_four">麒麟灵兽，踏云而来\n高级入场特效</string>
    <string name="noble_mount_five">霸气应龙，君临天下\n高级入场特效</string>
    <string name="title_noble_right_two">超值优惠</string>
    <string name="noble_discount_desc">惊喜礼遇\n续费%1$s折</string>
    <string name="title_noble_right_three">贵族标识</string>
    <string name="noble_identity_desc">专属身份\n%1$s勋章</string>
    <string name="title_noble_right_four">发言特权</string>
    <string name="noble_speak_desc">尊享%1$d级气泡%2$d个\n解锁1-%3$d级粉丝弹幕</string>
    <string name="title_noble_right_five">贵宾席</string>
    <string name="title_noble_right_six">开通通知</string>
    <string name="title_noble_right_seven">喇叭</string>
    <string name="text_charge_noble_one">开通%1$s：</string>
    <string name="text_charge_noble_two">续费%1$s：</string>
    <string name="btn_charge_noble">立即开通</string>
    <string name="btn_renewal_noble">续费</string>
    <string name="noble_diamond_balance">钻石余额：</string>
    <string name="tip_open_noble_success">贵族开通成功！</string>
    <string name="tip_send_broadcast_success">提交喇叭消息成功，请等待审核通过</string>
    <string name="treasure_chest_text_one">再等一下</string>
    <string name="treasure_chest_text_two">开宝箱</string>
    <string name="title_noble_expiration_reminder">贵族到期提示</string>
    <string name="text_noble_expiration_reminder">尊贵的骑士贵族会员，您在小9开通的骑士贵族即将到期，
        请您及时续费，如过期未办理，您将享受不到为您提供的续费折扣</string>
    <string name="noble_lions">雄狮</string>
    <string name="noble_arrive">骑着 %s 驾临</string>
    <string name="colorful_bubbles">炫彩气泡</string>

    <string name="chat_room_pin_head">置顶消息</string>

    <string name="tips">提示</string>
    <string name="permissions_message_format">当前应用缺少【%s】权限，该功能暂时无法使用。如若需要，请单击【设置】按钮前往设置中心进行权限授权。</string>
    <string name="setting">设置</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="permissions_camera">摄像头</string>
    <string name="permissions_photos">照片和视频</string>
    <string name="copy_success">复制成功</string>
    <string name="chat_send_message_no_login">游客不能在广场发言，请您先登录！可直接私聊主播哦</string>
    <string name="chat_send_message_hint">请输入内容</string>
    <string name="input_params_error">输入参数异常</string>
    <string name="chat_send_message_size_too_big">内容超过500字</string>
    <string name="mute_room_hint">全员禁言中</string>
    <string name="emoji_text">表情</string>
    <string name="emoji_gif">快捷回复</string>
    <string name="chat_online">在线</string>
    <string name="chat_offline">离线</string>
    <string name="kick_out_user_tips">您已被踢出群聊</string>
    <string name="when_agnent_left_sender_nickname">提示</string>
    <string name="when_agnent_left_tips_message">助理当前不在线，消息将以离线方式发给助理</string>
    <string name="loading">加载中</string>
    <string name="network_error">网络连接异常，请稍后再试</string>
    <string name="send_message_too_quickly">发言过快,请稍后重试</string>

    <string name="chat_global">广场</string>
    <string name="you_are_ban">当前用户已被禁言</string>
    <string name="disallow_send_message_for_ban">禁言状态下无法发言</string>
    <string name="search_assistant_nickname">搜索助理昵称</string>
    <string name="search_assistant_btn">搜索</string>
    <string name="search_assistant_message_success">搜索添加助理成功</string>
    <string name="search_assistant_message_fail">查无此助理、或添加失败</string>
    <string name="represent_pic">图片</string>
    <string name="empty_common">暂无数据</string>
    <string name="recommend_message">主播目前关播，可前往其他直播间观看。</string>
    <string name="live_quality_high">高清</string>
    <string name="live_quality_uhd">1080p</string>
    <string name="live_quality_4k">4k</string>
    <string name="live_quality_login">(注册登入)</string>
    <string name="please_login">请登录</string>
    <string name="live_quality_smooth">流畅</string>
    <string name="playback_error_default">播放失败</string>
    <string name="playback_error_unable_to_query_device_decoders">Unable to query device decoders</string>
    <string name="diamond_expense">%d钻石</string>
    <string name="diamond_account">我的钻石：%s</string>


</resources>