<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/clr_transparent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_assistant_search"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:paddingHorizontal="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/ll_assistant_search"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/bg_assistant_search"
                android:gravity="center_vertical|start"
                android:orientation="horizontal"
                app:layout_constraintEnd_toStartOf="@id/btn_assistant_search"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/iv_assistant_search"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginStart="18dp"
                    android:src="@drawable/ic_search_gray"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/et_assistant_search"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

                <EditText
                    android:id="@+id/et_assistant_search"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:autofillHints="no"
                    android:background="@null"
                    android:hint="@string/search_assistant_nickname"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:lines="1"
                    android:textColor="#151515"
                    android:textColorHint="#c3c3c3"
                    android:textSize="14sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/btn_assistant_search"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:paddingHorizontal="12dp"
                android:text="@string/search_assistant_btn"
                android:background="@drawable/bg_chat_send"
                android:textColor="@color/white"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ll_assistant_search"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_assistant_message"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible">

            <TextView
                android:id="@+id/tv_assistant_message_success"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_assistant_message_success"
                android:drawablePadding="10dp"
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp"
                android:text="@string/search_assistant_message_success"
                android:textColor="@color/white"
                android:visibility="invisible"
                app:drawableLeftCompat="@drawable/ic_add_green"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/tv_assistant_message_fail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_assistant_message_fail"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="cl_assistant_message,cl_assistant_search" />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/barrier">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_chat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:background="@color/white"
                tools:itemCount="5"
                tools:listitem="@layout/item_live_chat_room_list" />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>